# 3DCGAnimation

./: CMakeLists.txt
Final Project/: CMakeLists.txt  README.html
Final Project/src/: application.cpp  disable_all_warnings.h  mesh.h  shader.cpp  shader.h
resources/: floor.mtl
shaders/: char_frag.glsl  char_vert.glsl  floor_frag.glsl  floor_vert.glsl  minimap_char_frag.glsl  minimap_char_vert.glsl  minimap_frag.glsl  minimap_vert.glsl  shader_frag.glsl  shader_frag_environment.glsl  shader_vert.glsl  shader_vert_environment.glsl  shadow_vert.glsl  test_frag.glsl  test_vert.glsl  toon_frag.glsl  trees_head_frag.glsl  trunk_frag.glsl  x_ray_frag.glsl  x_ray_vert.glsl
src/: application.cpp  camera.cpp  camera.h  mesh.cpp  mesh.h  texture.cpp  texture.h  tiny_obj.cpp  window.cpp  window.h
